--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,8 @@
+body{
+  max-width: 960px;
+  min-width: 375px;
+}
+
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -12,6 +17,13 @@ cite {
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
+}
+
+#external-links {
+  width: 20%;
+  display: inline-block;
+  vertical-align: top;
+  padding-right: 1%;
 }
 
 /* you're welcome to edit the
@@ -30,3 +42,32 @@ figcaption {
   font-style: italic;
   text-align: right;
 }
+
+main {
+width: 75%;
+float: right;
+vertical-align: top;
+}
+
+@media only screen and (max-width: 500px) {
+
+body {
+  font-size: 2em;
+}
+
+#external-links {
+  width: 100%;
+  display: inline-block;
+  vertical-align: top;
+  padding-right: 1%;
+}
+
+main {
+width: 100%;
+vertical-align: top;
+}
+
+}
+
+
+
